syntax = "proto3";

service PurchaseService {
  rpc purchase(PurchaseRequest) returns (PurchaseResponse){};
  rpc getById(GetByIdRequest) returns (PurchaseResponse){};
  rpc getAll(GetAllRequest) returns (GetAllPurchaseResponse){};
}

message PurchaseRequest {
  string title = 1;
  string description = 2;
  float price = 3;
  string userId = 4;
}

message PurchaseResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  float price = 4;
}

message GetAllPurchaseResponse {
  repeated PurchaseResponse purchases = 1;
}

message GetByIdRequest {
  string id = 1;
  string userId = 2;
}

message GetAllRequest {
  string userId = 1;
}

