syntax = "proto3";

message User {
  int32 id = 1;
  string email = 2;
  string username = 3;
  string passsword = 4;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message RegisterUserRequest {
  User user = 1;
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  User user = 1;
}

message LoginUserResponse {
  string token = 1;
}

service UserService {
  rpc getUserById(GetUserByIdRequest) returns (UserResponse);
  rpc registerUser(RegisterUserRequest) returns (UserResponse);
  rpc loginUser(LoginUserRequest) returns (LoginUserResponse);
}